# RULe

./: .gitignore  Experiment.log.csv  LICENSE  Preliminary_Experiments.ipynb  Preliminary_Experiments_1D.ipynb  Preliminary_Experiments_2D_neg_loglikelihood.ipynb  README.md  RUL_SA_prelim_results_cmapss_1st_linear.csv  activations.py  data.py  losses.py  main.py  model_training_28_10.py  model_training_full.py  modeling.py  objective.py  objective_total_var.py  preprocessing.py  requirements.txt  setup.cfg  test_SO_dataset1.ipynb  test_SO_dataset3.ipynb  tests.ipynb  tests_SO.ipynb  tests_dataset1.ipynb  tests_dataset2.ipynb  tests_dataset3.ipynb
LSTM/dataset_1/: results_5_2
Notebooks/: test_SO_dataset1.ipynb  test_SO_dataset3.ipynb  tests_dataset1.ipynb  tests_dataset3.ipynb
RULe/: data.py  losses.py  main.py  model_training_full.py  modeling.py  objective.py  preprocessing.py
mipego/: mipego.py
mipego_multi/: Surrogate.py
toy_examples_(debugging)/: toy.py  toy_callable.py
