[metadata]
name = RULe
version = 1.0
author = Sander van Rijn
author_email = s.j.van.rijn@liacs.leidenuniv.nl
description = work in progress package for multi-fidelity surrogates assisted optimization

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .